--- a/Packages/Presentation/Sources/Presentation/Modules/SignIn/View/SignInViewController.storyboard
+++ b/Packages/Presentation/Sources/Presentation/Modules/SignIn/View/SignInViewController.storyboard
@@ -12,7 +12,7 @@
         <!--Sign In View Controller-->
         <scene sceneID="yXs-Dx-Kz0">
             <objects>
-                <viewController modalPresentationStyle="overFullScreen" id="RvU-Wz-6Oh" customClass="SignInViewController" customModule="Presentation" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="overFullScreen" id="RvU-Wz-6Oh" customClass="SignInViewController" customModule="Presentation"  sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ryh-Dd-KJm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,7 +31,7 @@
                                             <constraint firstAttribute="width" secondItem="pvP-8h-5la" secondAttribute="height" multiplier="127:147" id="y0w-Oy-Vlt"/>
                                         </constraints>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scE-s5-D3m" customClass="SignInDescriptionView" customModule="Presentation" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scE-s5-D3m" customClass="SignInDescriptionView" customModule="Presentation" >
                                         <rect key="frame" x="37.5" y="173.5" width="300" height="300"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
