--- a/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewCell.xib
+++ b/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DeckPreviewCell" customModule="Presentation" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DeckPreviewCell" customModule="Presentation" >
             <rect key="frame" x="0.0" y="0.0" width="80" height="96"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
