--- a/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewView.xib
+++ b/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckPreview/DeckPreviewView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckPreviewView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckPreviewView" customModule="Presentation" >
             <connections>
                 <outlet property="deckPreviewCollectionView" destination="DBl-de-gtK" id="6kd-cC-WlB"/>
                 <outlet property="indicator" destination="Imo-8G-rpB" id="KfD-cp-4kD"/>
