--- a/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckSelection/DeckSelectionCollectionViewCell.xib
+++ b/Packages/Presentation/Sources/Presentation/Modules/Deck/View/Custom/DeckSelection/DeckSelectionCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="VmK-L7-vWP" customClass="DeckSelectionCollectionViewCell" customModule="Presentation" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="VmK-L7-vWP" customClass="DeckSelectionCollectionViewCell" customModule="Presentation" >
             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="hDO-AL-iGJ">
