--- a/Packages/Presentation/Sources/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListView.xib
+++ b/Packages/Presentation/Sources/Presentation/Modules/DeckCreate/View/Custom/List/DeckCreateListView.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckCreateListView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckCreateListView" customModule="Presentation" >
             <connections>
                 <outlet property="deckCardCollectionView" destination="rMj-Jt-90H" id="DX5-Ej-dzq"/>
                 <outlet property="indicator" destination="Qml-c6-3hi" id="cZ7-FH-qUA"/>
