--- a/Packages/Presentation/Sources/Presentation/Modules/DeckCreate/View/Custom/Preview/DeckCreatePreviewView.xib
+++ b/Packages/Presentation/Sources/Presentation/Modules/DeckCreate/View/Custom/Preview/DeckCreatePreviewView.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckCreatePreviewView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeckCreatePreviewView" customModule="Presentation" >
             <connections>
                 <outlet property="collectionView" destination="uQK-sK-AtB" id="SJf-78-afH"/>
             </connections>
