--- a/Packages/Presentation/Sources/Presentation/Utility/UI/View/Ad/FooterAdView.xib
+++ b/Packages/Presentation/Sources/Presentation/Utility/UI/View/Ad/FooterAdView.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FooterAdView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FooterAdView" customModule="Presentation" >
             <connections>
                 <outlet property="indicator" destination="pir-ed-3yp" id="w0K-ik-K8P"/>
             </connections>
