--- a/Packages/Presentation/Sources/Presentation/Utility/UI/View/CancelableLoadingView/CancelableLoadingView.xib
+++ b/Packages/Presentation/Sources/Presentation/Utility/UI/View/CancelableLoadingView/CancelableLoadingView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CancelableLoadingView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CancelableLoadingView" customModule="Presentation" >
             <connections>
                 <outlet property="cancelButton" destination="4yY-8y-ch7" id="LTT-cc-ggU"/>
                 <outlet property="indicator" destination="NVg-MF-vz5" id="tJM-wI-LAk"/>
