--- a/Packages/Presentation/Sources/Presentation/Utility/UI/View/TabBarView/TabBarButtonView.xib
+++ b/Packages/Presentation/Sources/Presentation/Utility/UI/View/TabBarView/TabBarButtonView.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TabBarButtonView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TabBarButtonView" customModule="Presentation" >
             <connections>
                 <outlet property="borderLine" destination="vzZ-Cf-pcA" id="gwu-1D-RMq"/>
                 <outlet property="button" destination="eqL-aG-Kwg" id="oXR-38-Ewr"/>
