--- a/Packages/Presentation/Sources/Presentation/Utility/UI/View/TabBarView/TabBarView.xib
+++ b/Packages/Presentation/Sources/Presentation/Utility/UI/View/TabBarView/TabBarView.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TabBarView" customModule="Presentation" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TabBarView" customModule="Presentation" >
             <connections>
                 <outlet property="selectedView" destination="5Gb-kC-t0C" id="gdJ-v0-8tQ"/>
                 <outlet property="selectedViewLabel" destination="yJc-wD-wu8" id="Gp6-El-x95"/>
